# dados_programas_motos

./: .gitignore  app.py  pyproject.toml  sysdata.py
.streamlit/: config.toml
data/: Superintendencias_DETRAN.gpkg  base_cetran.csv
