[project]
name = "dados-programa-motos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geobr>=0.2.2",
    "geopandas>=1.1.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "streamlit>=1.28.0",
    "streamlit-folium>=0.15.0",
]
